--- a/src/app/portfolio/page.module.css
+++ b/src/app/portfolio/page.module.css
@@ -2,15 +2,13 @@
   font-size: 100px;
 }
 
-.container {
-}
-
 .selectTitle {
   margin: 20px 0px;
 }
 
 .items {
   display: flex;
+  flex-wrap: wrap;
   gap: 50px;
 }
 
@@ -43,4 +41,25 @@
 
 .item:hover .title {
   color: #53c28b;
+}
+
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .items {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .mainTitle {
+    text-align: center;
+    font-size: 72px;
+  }
+
 }
