--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -34,9 +34,34 @@
   }
 }
 
-
 .desc {
   font-size: 24px;
   font-weight: 300;
 }
 
+@media (max-width: 1024px) {
+  
+  .title {
+    font-size: 36px;
+  }
+
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .title {
+    text-align: center;
+  }
+
+  .desc {
+    text-align: center;
+  }
+
+  .item {
+    align-items: center;
+  }
+}
