--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -24,3 +24,14 @@
   cursor: pointer;
   border-radius: 3px;
 }
+
+@media (max-width: 768px) {
+
+  .container {
+    flex-direction: column;
+    height: auto;
+    gap: 20px;
+    padding: 20px;
+  }
+
+}
