--- a/src/app/contact/page.module.css
+++ b/src/app/contact/page.module.css
@@ -1,6 +1,3 @@
-.container {
-}
-
 .title {
   font-size: 60px;
   margin-bottom: 100px;
@@ -50,4 +47,38 @@
   border: 3px solid #bbb;
   font-size: 20px;
   font-weight: bold;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+}
+
+.Button {
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+
+  .title {
+    font-size: 32px;
+  }
+
+  .content {
+    flex-direction: column;
+  }
+
+  .image {
+    width: 300px;
+  }
+
+  .input {
+    padding: 10px;
+    font-size: 16px;
+  }
+
+  .form {
+    text-align: center;
+  }
+
 }
