--- a/src/app/portfolio/[category]/page.module.css
+++ b/src/app/portfolio/[category]/page.module.css
@@ -20,7 +20,8 @@
 }
 
 .img {
-  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
 .content {
@@ -39,3 +40,18 @@
   font-size: 20px;
 }
 
+@media (max-width: 768px) {
+  
+  .container {
+    text-align: center;
+  }
+
+  .item {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .item:nth-child(2n + 1) {
+    flex-direction: column;
+  }
+}
